--- a/matrix_bot/conf.toml
+++ b/matrix_bot/conf.toml
@@ -4,7 +4,7 @@ join_on_invite = true
 encryption_enabled = true
 emoji_verify = false
 ignore_unverified_devices = false
-store_path = "./crypto_store/"
+store_path = "/data/crypto_store"
 allowlist = []
 blocklist = []
 first_sync_full = false
