--- a/matrix_bot/conf.toml
+++ b/matrix_bot/conf.toml
@@ -3,7 +3,7 @@ timeout = 65536
 join_on_invite = true
 encryption_enabled = true
 emoji_verify = false
-ignore_unverified_devices = false
+ignore_unverified_devices = true
 store_path = "/data/crypto_store"
 allowlist = []
 blocklist = []
